overflow fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -103,6 +103,7 @@ body{
         &.hidden{
             height: 0;
             padding: 0;
+            overflow: hidden;
         }
     }
 
